--- a/config/nginx/web.conf
+++ b/config/nginx/web.conf
@@ -6,16 +6,18 @@ server {
 	ssl_certificate_key    /shared/ssl/servidor.key;
 	
 	server_name _;
-	root   /var/www/public;
+	root   /var/www/html;
 #	root   /code/public;
 	index  index.php index.html;
 #	access_log /var/log/nginx/nginx.vhost.access.log;
 #	error_log /var/log/nginx/nginx.vhost.error.log;
-#	location / {
+	location / {
+	    autoindex on;
+        autoindex_format html;
 #		root   /code/public;
 #		root   /var/www/public;
 #		index  index.php index.html;
-#	}
+	}
 
     location ~ \.php$ {
         try_files $uri =404;
