--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,35 @@
 version: '3'
 services:
-#  nginx_shop:
-#    image: nginx
-#    ports:
-#      - "80:80"
-#      - "443:443"
-#    volumes:
-#      - ./config/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro
-#      - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-#      - ./config/www/:/var/www
-#      - ./config/cert_ssl:/shared/ssl
-#    links:
-#      - php
-#    networks:
-#      - db_net
-##        ipv4_address: 10.24.1.4
-#  php:
-#    build:
-#      context: dockerfiles
-#      dockerfile: php
-#    image: repesca/php
-#    volumes:
-#      #          - ./config/filterweb/:/code
-#      #          - ./config/php/php.ini:/usr/local/etc/php/php.ini
-#      - ./config/www/:/var/www
-#    links:
-#      - db
-#    networks:
-#      - db_net
-##        ipv4_address: 10.24.1.3
-#
+  nginx:
+    image: nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./config/nginx/web.conf:/etc/nginx/conf.d/web.conf:ro
+      - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./config/www/:/var/www:ro
+      - ./config/cert_ssl:/shared/ssl
+    links:
+      - php
+    networks:
+      - db_net
+#        ipv4_address: 10.24.1.4
+  php:
+    build:
+      context: dockerfiles
+      dockerfile: php
+    image: repesca/php
+    volumes:
+      #          - ./config/filterweb/:/code
+      #          - ./config/php/php.ini:/usr/local/etc/php/php.ini
+      - ./config/www/:/var/www:ro
+    links:
+      - db
+    networks:
+      - db_net
+#        ipv4_address: 10.24.1.3
+
   db:
     build:
       context: dockerfiles/postgresql
@@ -46,16 +46,20 @@ services:
       POSTGRES_INITDB_ARGS: "--auth-host=scram-sha-256 --auth-local=scram-sha-256"
 #    volumes:
 #      - ./volumes/postgres/data:/var/lib/postgresql/data
-#    networks:
-#      - db_net
+    networks:
+      - db_net
 ##        ipv4_address: 10.24.1.2
   adminer:
     image: adminer
     restart: always
+    links:
+      - db
     ports:
       - 8080:8080
-#networks:
-#  db_net:
+    networks:
+      - db_net
+networks:
+  db_net:
 #    driver: bridge
 ##    ipam:
 ##      config:
